--- a/pprint/index.html
+++ b/pprint/index.html
@@ -60,7 +60,7 @@ span.hljs-tag, span.hljs-symbol{
     </style><title>PPrint</title><script src="scripts.js"></script></head><body><div>
 <a href="https://github.com/lihaoyi/upickle-pprint"><img style="position: absolute;top: 0px;right: 0px;border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" /></a>
 <div style="margin: 0px;color: #333;text-align: center;padding: 2.5em 2em 0;border-bottom: 1px solid #eee;display: block;" id="PPrint" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><h1 style="margin: 0.2em 0;font-size: 3em;font-weight: 300;">PPrint<a class=" scalatex-site-Styles-headerLink" href="#PPrint" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a></h1><br /></div><div class=" scalatex-site-Styles-content">
-  <pre><code class="scala scalatex-site-Styles-highlightMe">scala&gt; import pprint.Config.Defaults._
+  <pre><code class="scala scalatex-site-Styles-highlightMe">scala&gt; import pprint.Config.Colors._
 
 scala&gt; pprint.pprintln(List(Seq(Seq(&quot;mgg&quot;, &quot;mgg&quot;, &quot;lols&quot;), Seq(&quot;mgg&quot;, &quot;mgg&quot;)), Seq(Seq(&quot;ggx&quot;, &quot;ggx&quot;),Seq(&quot;ggx&quot;, &quot;ggx&quot;, &quot;wtfx&quot;))))
 res1: String =
@@ -78,6 +78,20 @@ List(
     List(1, 2, 3)
   ),
   Foo(&quot;world&quot;, List())
+)
+scala&gt; class Foo{
+     |   def bar(grid: Seq[Seq[Int]]) = {
+     |     pprint.log(grid, tag=&quot;grid&quot;)
+     |   }
+     | }
+defined class Foo
+
+scala&gt; new Foo().bar(Seq(0 until 10, 10 until 20, 20 until 30))
+pkg.Foo#bar &quot;grid&quot;:12
+List(
+  Range(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
+  Range(10, 11, 12, 13, 14, 15, 16, 17, 18, 19),
+  Range(20, 21, 22, 23, 24, 25, 26, 27, 28, 29)
 )</code></pre>
   <p>
     PPrint is a module that lets you easily print data structures in a form that is more convenient to use both visually and programmatically. Unlike a traditional <code class="scala scalatex-site-Styles-highlightMe" style="display: inline;padding: 0px;margin: 0px;">.toString</code>, PPrint...
@@ -96,10 +110,10 @@ List(
   <div style="margin: 0px;color: #333;text-align: center;padding: 2.5em 2em 0;border-bottom: 1px solid #eee;display: block;" id="GettingStarted" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><h1 style="margin: 0.2em 0;font-size: 3em;font-weight: 300;">Getting Started<a class=" scalatex-site-Styles-headerLink" href="#GettingStarted" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a></h1><br /></div>
     <p>
       Add the following to your SBT config:</p>
-    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;com.lihaoyi&quot; %% &quot;pprint&quot; % &quot;0.3.7&quot;</code></pre>
+    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;com.lihaoyi&quot; %% &quot;pprint&quot; % &quot;0.3.8&quot;</code></pre>
     <p>
       Or for Scala.js:</p>
-    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;com.lihaoyi&quot; %%% &quot;pprint&quot; % &quot;0.3.7&quot;</code></pre>
+    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;com.lihaoyi&quot; %%% &quot;pprint&quot; % &quot;0.3.8&quot;</code></pre>
     <p>
       The above example then showed how to use the default pprint configuration. You can also use
 </p>
@@ -130,9 +144,26 @@ List(
 scala&gt; pprint.pprintln(Seq(1, 2, 3), width = 6, height = 2) // truncate
 List(
   1,
-...
+...</code></pre>
+    <p>
+      PPrint also provides the <code>pprint.log</code> function, which automatically adds some context so you can find your printouts later:</p>
+    <pre><code class="scala scalatex-site-Styles-highlightMe">scala&gt; class Foo{
+     |   def bar(grid: Seq[Seq[Int]]) = {
+     |     pprint.log(grid, tag=&quot;grid&quot;)
+     |   }
+     | }
+defined class Foo
 
-</code></pre>
+scala&gt; new Foo().bar(Seq(0 until 10, 10 until 20, 20 until 30))
+pkg.Foo#bar &quot;grid&quot;:12
+List(
+  Range(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
+  Range(10, 11, 12, 13, 14, 15, 16, 17, 18, 19),
+  Range(20, 21, 22, 23, 24, 25, 26, 27, 28, 29)
+)</code></pre>
+    <p>
+      Note how the package name, class name, and method name, along with the optional <code>tag</code>. are all formatted nicely for you to read. This should make it much easier for you to find each individual print later. Just like `pprint.pprintln`, the output is nicely formatted across multiple lines and syntax-highlighted for readability.
+</p>
   <div style="margin: 0px;color: #333;text-align: center;padding: 2.5em 2em 0;border-bottom: 1px solid #eee;display: block;" id="Streaming" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><h1 style="margin: 0.2em 0;font-size: 3em;font-weight: 300;">Streaming<a class=" scalatex-site-Styles-headerLink" href="#Streaming" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a></h1><br /></div>
 
     <p>
@@ -195,6 +226,13 @@ res0: Iterator[String] = non-empty iterator
       In order to pretty print a type <code class="scala scalatex-site-Styles-highlightMe" style="display: inline;padding: 0px;margin: 0px;">T</code>, you need to have a <code class="scala scalatex-site-Styles-highlightMe" style="display: inline;padding: 0px;margin: 0px;">T: PPrint</code> context bound present. In order to write your own custom pretty printer for some type <code class="scala scalatex-site-Styles-highlightMe" style="display: inline;padding: 0px;margin: 0px;">T</code>, provide an implicit <code class="scala scalatex-site-Styles-highlightMe" style="display: inline;padding: 0px;margin: 0px;">PPrinter[T]</code> in scope.
 </p>
   <div style="margin: 0px;color: #333;text-align: center;padding: 2.5em 2em 0;border-bottom: 1px solid #eee;display: block;" id="VersionHistory" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><h1 style="margin: 0.2em 0;font-size: 3em;font-weight: 300;">Version History<a class=" scalatex-site-Styles-headerLink" href="#VersionHistory" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a></h1><br /></div>
+    <h1 id="0.3.8" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#0.3.8" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>0.3.8</h1>
+      <ul>
+        <li>
+          Robustify PPrint macros slightly against crashes <a href="https://github.com/lihaoyi/Ammonite/issues/198">Ammonte#198</a> and <a href="https://github.com/tpolecat/doobie/issues/258">doobie#258</a>
+</li>
+        <li>
+          Added the <code class="scala scalatex-site-Styles-highlightMe" style="display: inline;padding: 0px;margin: 0px;">pprint.log</code> function, for convenient no-setup console logging and debugging</li></ul>
     <h1 id="0.3.7" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#0.3.7" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>0.3.7</h1>
       <ul>
         <li>
@@ -237,7 +275,7 @@ res0: Iterator[String] = non-empty iterator
           Shared case-class implicit-derivation back-end with uPickle, greatly expanding the scope of things that can be prettyprinted</li></ul></div>
 </div><script>
     scalatex.scrollspy.Controller().main(
-      [{"value":"PPrint","children":[{"value":"Getting Started","children":[]},{"value":"Streaming","children":[]},{"value":"Customization","children":[]},{"value":"Version History","children":[{"value":"0.3.7","children":[]},{"value":"0.3.6","children":[]},{"value":"0.3.5","children":[]},{"value":"0.3.4","children":[]},{"value":"0.3.3","children":[]},{"value":"0.3.2","children":[]},{"value":"0.3.1","children":[]},{"value":"0.3.0","children":[]}]}]}]
+      [{"value":"PPrint","children":[{"value":"Getting Started","children":[]},{"value":"Streaming","children":[]},{"value":"Customization","children":[]},{"value":"Version History","children":[{"value":"0.3.8","children":[]},{"value":"0.3.7","children":[]},{"value":"0.3.6","children":[]},{"value":"0.3.5","children":[]},{"value":"0.3.4","children":[]},{"value":"0.3.3","children":[]},{"value":"0.3.2","children":[]},{"value":"0.3.1","children":[]},{"value":"0.3.0","children":[]}]}]}]
   )</script><script>
     ['DOMContentLoaded', 'load'].forEach(function(ev){
       addEventListener(ev, function(){
@@ -247,4 +285,4 @@ res0: Iterator[String] = non-empty iterator
         );
       })
     })
-  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
